@@ -1,6 +1,8 @@
 undertow.host=127.0.0.1
 undertow.port=8888
 undertow.resourcePath = src/test/resources
+undertow.hotSwapClassPrefix=com.
+undertow.unHotSwapClassPrefix=com.
 
 jboot.redis.host=127.0.0.1
 
