@@ -1,6 +1,7 @@
 jboot v2.0-rc.8:
 新增：Limit模块，可以用于没有运维的时候进行代码配置限流和降级
 新增：WebSocketEndpoint 的配置支持 jboot.web.webSocketEndpoint
+新增：undertow.unHotSwapClassPrefix 配置的支持，用于排除某些类在RPC下热加载的问题
 优化：统一 JbootAppListener 的方法名，详情：https://gitee.com/fuhai/jboot/blob/v2.0/doc/docs/upgrade.md#%E4%BF%AE%E6%94%B9-jbootapplistener-%E7%9A%84%E6%96%B9%E6%B3%95%E5%90%8D
 修复：修复由于升级 JFinal 到 v3.6 后，导致 sql 模板无法正常加载的问题
 移除：ActionCache 模块，JFinal内部已经提供了类似功能
